<resources>
    <string name="app_name">E-WayAlerts</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="last_name">Last Name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Didn_received_OTPd">Didn\'t received OTP?</string>
    <string name="request_otp">Request OTP</string>
    <string name="reset_pin">Reset PIN?</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="resetpin">RESET PIN</string>
    <string name="resepin">Reset PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="submit">SUBMIT</string>
    <string name="AddBusiness">Add Business</string>
    <string name="Step1">Step 1</string>
    <string name="yes_text">Yes</string>
    <string name="AddBusinessheadline">There are many Variations of passages of loream\n ipsum available, but the majority</string>
    <string name="AddBusinessContain">There are many Variations of passages of loream\n ipsum available, but the majority have suffered\n alteration in some from</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Business_Name">Business Name</string>
    <string name="GST_Number">GST Number</string>
    <string name="Adress_1">Address 1</string>
    <string name="Adress_2">Address 2 (Optional)</string>
    <string name="City">City</string>
    <string name="Pincode">Pincode</string>
    <string name="State">Sate</string>
    <string name="Owner_First_Name">Owner First Name</string>
    <string name="Owner_Last_Name">Owner Last Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Email_Address">Email Address (Optional)</string>
    <string name="StepAddStaff">Step 2 - Add Staff</string>
    <string name="BusinessAccess">Business Access</string>
    <string name="NotificationType">Notification Type</string>
    <string name="AddStaff">Add Staff</string>
    <string name="In_App_push_notification">In App Push Notification</string>
    <string name="Email_Notification">Email Notification</string>
    <string name="SMS_Notification">SMS Notification</string>
    <string name="Staff_First_Name">Staff First Name</string>
    <string name="Staff_Last_Name">Staff Last Name</string>
    <string name="push">Push</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="AddEBill">ADD E-WAY BILL</string>
    <string name="AddEBillContain">There are many Variations of passages of loream\n ipsum available, but the majority have suffered\n alteration in some from</string>
    <string name="e_way_bill_number">E-Way Bill Number</string>
    <string name="e_way_bill_date">E-Way Bill Date</string>
    <string name="Generated_By">Generated By</string>
    <string name="Valid_From">Valid From</string>
    <string name="Valid_Until">Valid Until</string>
    <string name="Place_Of_Delivery">Place Of Delivery</string>
    <string name="AddVehicle">Add Vehicle</string>
    <string name="Vehicle_Number">Vehicle Number</string>
    <string name="contact_first_name">First Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_last_name">Last Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="noteme">*Please note me,we do not share your details with any third party.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_businesses">Businesses</string>
    <string name="menu_staff">Staff</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_ewaybill">E-Way Bills</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_password">Password</string>
    <string name="menu_terms_and_conditions">Terms and conditions</string>
    <string name="menu_logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="About_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="account_ifo">Account Information</string>
    <string name="tc">Terms and conditions</string>
    <string name="change_pin">Change Pin</string>
    <string name="feedback_titel">Feedback Titel</string>
    <string name="profile">Profile</string>
    <string name="Language">Language</string>
    <string name="SMS_Credit">SMS Credit</string>
    <string name="fleet">Fleet</string>
    <string name="step2">Step2</string>
    <string name="add_staff">- Add Staff</string>
    <string name="enter_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="enter_pin_number">Please enter pin number</string>
    <string name="enter_valid_pin_number">Please enter a valid pin number</string>

    <string name="mobile_number_already_registerd">The mobile has already been taken.</string>
    <string name="confirmpin_notequal">Please check confirm pin is not same as set pin</string>
    <string name="set_pin">Set PIN</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">HINDI</string>
    <string name="malayalam">MALAYALAM</string>
    <string name="kanada">KANADA</string>
    <string name="telegu">TELEGU</string>
    <string name="tamil">TAMIL</string>
    <string name="gujrati">GUJRATI</string>
    <string name="punjabi">PUNJABI</string>
    <string name="add_Business">-Add Business</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="enter_email_Address">Please enter email address</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="please_enter_city">Please enter city name</string>
    <string name="please_enter_locality">Please enter Please enter near by locality</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="enter_gst_number">Please enter Gst number</string>
    <string name="enter_business_name">Please enter business name</string>
    <string name="please_enter_state">Please enter State</string>
    <string name="make_payment">Make Payment</string>
    <string name="total">Total:</string>
    <string name="gst_18">GST 18%:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="affiliate_code">Affiliate Code:</string>
    <string name="subscription_amount">Subscription Amount:</string>
    <string name="service_end_date">Service End Date:</string>
    <string name="service_start_date">Service Start Date:</string>
    <string name="checkout">Checkout</string>
    <string name="selectUserRoll">Select User Roll</string>
    <string name="pleaseSelectbusiness">Please Select Business</string>
    <string name="checkInternet">Please check your Internet Connection</string>
    <string name="alert_group">Alert Group</string>
    <string name="vehicleName">Vehicle Name</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="group_name">Group Name</string>
    <string name="add_alert_group">Add Alert Group</string>
    <string name="staff_access">Staff Access</string>
    <string name="select_business">Select Business</string>
    <string name="enter_group_name">Please enter group name</string>
    <string name="select_staff">Please select staff</string>
    <string name="single_bill">Single Bill</string>
    <string name="consoildated_bill">Consoildated Bill</string>
    <string name="place_of_origin">Place of origin</string>
    <string name="driver_number">Driver Number</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="select_driver_name">Select Driver Name</string>
    <string name="select_vehicle_number">Select Vehicle Number</string>
    <string name="two_hour">Two Hour</string>
    <string name="one_hour">One Hour</string>
    <string name="select_bill_type">Please select bill type</string>
    <string name="valid_from_date">Select valid from date</string>
    <string name="valid_till_date">Select valid till date</string>
    <string name="todo">TODO</string>
    <string name="inprogress">Inprogress</string>
    <string name="completed">Completed</string>
    <string name="extended">Extended</string>
</resources>