<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mLayoutSubmit"
        android:scrollbars="vertical"
        android:layout_marginBottom="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/mLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mTxer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/AddBusiness"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/proxima_nova_alt_bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mTxer"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/proxima_nova_alt_regular"
                    android:text="@string/AddBusinessheadline"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


            </RelativeLayout>

            <EditText
                android:id="@+id/bname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Business_Name"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

            <EditText
                android:id="@+id/gstnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/GST_Number"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

            <EditText
                android:id="@+id/address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Adress_1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

            <EditText
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Adress_2"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/bcity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_rectangle_shap"
                    android:hint="@string/City"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/proxima_nova_alt_regular"/>

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_rectangle_shap"
                    android:hint="@string/Pincode"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/proxima_nova_alt_regular"/>


            </LinearLayout>


                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/border_rectangle_shap"
                    android:fontFamily="@font/proxima_nova_alt_regular"
                    android:hint="@string/State"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/_12sdp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/grey_color"
                android:text="--------------------------"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>


            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Owner_First_Name"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Owner_Last_Name"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/mobile_number"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_rectangle_shap"
                android:hint="@string/Email_Address"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/proxima_nova_alt_regular"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/mLayoutSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/background_rounded_but">

        <TextView
            android:id="@+id/submit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:text="@string/submit"
            android:textColor="@color/White"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/submit_txt"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
    </RelativeLayout>

</RelativeLayout>