<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_screen"
    tools:context=".activity.alert_group.AddAlertGroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mTxer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:text="@string/add_alert_group"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTxer"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/proxima_nova_alt_regular"
            android:text="@string/AddBusinessheadline"
            android:textSize="@dimen/_10sdp" />


    </RelativeLayout>

        <EditText
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordergrey"
            android:fontFamily="@font/proxima_nova_alt_regular"
            android:hint="@string/group_name"
            android:inputType="textPersonName"
            android:cursorVisible="true"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:importantForAutofill="no" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/BusinessAccess"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mdrop"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_rectangle_shap">

            <Spinner
                android:id="@+id/mSpinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingTop="@dimen/_2ssp"
                android:paddingBottom="@dimen/_2sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_keyboard_arrow" />

        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/staff_access"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_storage_yards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/addGroupBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_rounded_but">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:text="SUBMIT"
            android:textColor="@color/White"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
</RelativeLayout>